// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema for almostEligible 1`] = `
{
  "eligibleCriteria": {
    "usMiInSolitaryConfinementAtLeastSixMonths": {
      "eligibleDate": 2021-10-27T00:00:00.000Z,
    },
  },
  "externalId": "RES021",
  "formInformation": {
    "segregationType": "TEMPORARY_SOLITARY_CONFINEMENT",
  },
  "ineligibleCriteria": {
    "usMiPastWardenInPersonReviewForSccDate": {
      "latestWardenInPersonSccReviewDate": null,
      "nextSccDate": 2021-12-18T00:00:00.000Z,
      "numberOfExpectedReviews": null,
      "numberOfReviews": null,
      "solitaryStartDate": 2021-11-16T00:00:00.000Z,
    },
  },
  "isOverdue": false,
  "metadata": {
    "daysInCollapsedSolitarySession": 30,
  },
  "stateCode": "US_MI",
}
`;

exports[`schema for fullyEligible1 1`] = `
{
  "eligibleCriteria": {
    "usMiInSolitaryConfinementAtLeastSixMonths": {
      "eligibleDate": 2021-11-26T00:00:00.000Z,
    },
    "usMiPastWardenInPersonReviewForSccDate": {
      "latestWardenInPersonSccReviewDate": 2021-12-01T00:00:00.000Z,
      "nextSccDate": 2021-12-21T00:00:00.000Z,
      "numberOfExpectedReviews": null,
      "numberOfReviews": null,
      "solitaryStartDate": 2021-11-26T00:00:00.000Z,
    },
  },
  "externalId": "RES019",
  "formInformation": {
    "segregationType": "ADMINISTRATIVE_SOLITARY_CONFINEMENT",
  },
  "ineligibleCriteria": {},
  "isOverdue": true,
  "metadata": {
    "daysInCollapsedSolitarySession": 25,
  },
  "stateCode": "US_MI",
}
`;

exports[`schema for fullyEligible2 1`] = `
{
  "eligibleCriteria": {
    "usMiInSolitaryConfinementAtLeastSixMonths": {
      "eligibleDate": 2021-10-27T00:00:00.000Z,
    },
    "usMiPastWardenInPersonReviewForSccDate": {
      "latestWardenInPersonSccReviewDate": null,
      "nextSccDate": 2021-12-18T00:00:00.000Z,
      "numberOfExpectedReviews": 2,
      "numberOfReviews": 1,
      "solitaryStartDate": 2021-11-16T00:00:00.000Z,
    },
  },
  "externalId": "RES020",
  "formInformation": {
    "segregationType": "TEMPORARY_SOLITARY_CONFINEMENT",
  },
  "ineligibleCriteria": {},
  "isOverdue": false,
  "metadata": {
    "daysInCollapsedSolitarySession": 50,
  },
  "stateCode": "US_MI",
}
`;
